// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`selectableCardGroup > renders correctly 1`] = `
<DocumentFragment>
  .emotion-0 {
  border: none;
  padding: 0;
  margin: 0;
}

.emotion-2 {
  position: relative;
  padding: 1rem;
  border-radius: 0.25rem;
  -webkit-transition: border-color 200ms ease,box-shadow 200ms ease;
  transition: border-color 200ms ease,box-shadow 200ms ease;
  cursor: pointer;
  background: #ffffff;
  border: 1px solid #d9dadd;
  color: #3f4250;
}

.emotion-2[data-has-label='false']>:first-child {
  margin-bottom: -0.25rem;
}

.emotion-2[data-has-default-cursor='true'] {
  cursor: default;
}

.emotion-2[data-checked='true'] {
  border: 1px solid #8c40ef;
}

.emotion-2[data-error='true'] {
  border: 1px solid #b3144d;
}

.emotion-2[data-disabled='true'] {
  border: 1px solid #e9eaeb;
  color: #b5b7bd;
  background: #f3f3f4;
  cursor: not-allowed;
}

.emotion-2[data-image="illustration"] {
  padding: 0rem;
}

.emotion-2[data-image="icon"] {
  padding: 0rem;
  padding-right: 1rem;
}

.emotion-2:hover:not([data-error='true']):not([data-disabled='true']),
.emotion-2:active:not([data-error='true']):not([data-disabled='true']) {
  border: 1px solid #8c40ef;
}

.emotion-2:hover:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.emotion-2:active:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'] {
  box-shadow: 0px 4px 16px 4px #f6f3ffcc;
}

.emotion-2[data-has-label='true'] styles__17da2jl1,
.emotion-2[data-has-label='true'] .emotion-6 {
  width: 100%;
}

.emotion-5 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.5rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.emotion-5 .eqr7bqq3 {
  cursor: pointer;
}

.emotion-5[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.emotion-5[aria-disabled='true'] .eqr7bqq3 {
  cursor: not-allowed;
}

.emotion-5[aria-disabled='true'] .emotion-10 {
  fill: #e9eaeb;
}

.emotion-5[aria-disabled='true'] .emotion-10 .emotion-12 {
  stroke: #d9dadd;
  fill: #f3f3f4;
}

.emotion-5[aria-disabled='true'] .emotion-8[aria-invalid="true"]:checked+.emotion-10 {
  fill: #ffd3e3;
}

.emotion-5[aria-disabled='true'] .emotion-8[aria-invalid="true"]:checked+.emotion-10 .emotion-12 {
  stroke: #ffd3e3;
  fill: #ffd3e3;
}

.emotion-5[aria-disabled='true'] .emotion-8[aria-invalid="true"]+.emotion-10 {
  fill: #ffebf2;
}

.emotion-5[aria-disabled='true'] .emotion-8[aria-invalid="true"]+.emotion-10 .emotion-12 {
  stroke: #ffbbd3;
  fill: #ffebf2;
}

.emotion-5[aria-disabled='true'] .emotion-8:checked+.emotion-10 {
  fill: #e5dbfd;
}

.emotion-5[aria-disabled='true'] .emotion-8:checked+.emotion-10 .emotion-12 {
  stroke: #d8c5fc;
  fill: #d8c5fc;
}

.emotion-5[aria-disabled='true'] .emotion-8[aria-checked="mixed"]+.emotion-10 {
  fill: #e5dbfd;
}

.emotion-5[aria-disabled='true'] .emotion-8[aria-checked="mixed"]+.emotion-10 .emotion-12 {
  stroke: #e5dbfd;
  fill: #e5dbfd;
}

.emotion-5 .emotion-8:checked+.emotion-10 path {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transform: translate(2px, 2px);
  -moz-transform: translate(2px, 2px);
  -ms-transform: translate(2px, 2px);
  transform: translate(2px, 2px);
}

.emotion-5 .emotion-8:checked+.emotion-10 .emotion-12 {
  fill: #8c40ef;
  stroke: #8c40ef;
}

.emotion-5 .emotion-8[aria-invalid="true"]:checked+.emotion-10 .emotion-12 {
  fill: #e51963;
  stroke: #e51963;
}

.emotion-5 .emotion-8[aria-checked="mixed"]+.emotion-10 .eqr7bqq5 {
  fill: #ffffff;
}

.emotion-5 .emotion-8[aria-checked="mixed"]+.emotion-10 .emotion-12 {
  fill: #8c40ef;
  stroke: #8c40ef;
}

.emotion-5:hover[aria-disabled='false'] .emotion-8[aria-invalid='false'][aria-checked='false']+.emotion-10 .emotion-12 {
  stroke: #792dd4;
  fill: #e5dbfd;
}

.emotion-5:hover[aria-disabled='false'] .emotion-8[aria-invalid='false'][aria-checked='true']+.emotion-10 .emotion-12 {
  stroke: #792dd4;
  fill: #792dd4;
}

.emotion-5:hover[aria-disabled='false'] .emotion-8[aria-invalid='false'][aria-checked='mixed']+.emotion-10 .emotion-12 {
  stroke: #792dd4;
  fill: #792dd4;
}

.emotion-5:hover[aria-disabled='false'] .emotion-8[aria-invalid='true'][aria-checked='false']+.emotion-10 .emotion-12 {
  stroke: #92103f;
  fill: #ffd3e3;
}

.emotion-5:hover[aria-disabled='false'] .emotion-8[aria-invalid='true'][aria-checked='true']+.emotion-10 .emotion-12 {
  stroke: #d6175c;
  fill: #d6175c;
}

.emotion-5 .emotion-8[aria-invalid="true"]+.emotion-10 {
  fill: #e51963;
}

.emotion-5 .emotion-8[aria-invalid="true"]+.emotion-10 .emotion-12 {
  stroke: #e51963;
  fill: #ffebf2;
}

.emotion-5[data-checked='true'] {
  color: #641cb3;
}

.emotion-5[data-error='true'] {
  color: #b3144d;
}

.emotion-5[aria-disabled='true'] {
  color: #b5b7bd;
}

.emotion-5 input+svg {
  display: none;
}

.emotion-5 label {
  width: 100%;
}

.emotion-5:hover[aria-disabled='false'] .emotion-8[aria-invalid='false'][aria-checked='false']+.emotion-10 .emotion-12 {
  fill: #ffffff;
  stroke: #d9dadd;
}

.emotion-5:hover[aria-disabled='false'] .emotion-8[aria-invalid='false'][aria-checked='true']+.emotion-10 .emotion-12 {
  stroke: #8c40ef;
  fill: #8c40ef;
}

.emotion-5:hover[aria-disabled='false'] .emotion-8[aria-invalid='false'][aria-checked='mixed']+.emotion-10 .emotion-12 {
  stroke: #8c40ef;
  fill: #8c40ef;
}

.emotion-5 .emotion-8:focus+.emotion-10,
.emotion-5 .emotion-8:active+.emotion-10 {
  outline: none;
  background-color: #ffffff;
  fill: #ffffff;
}

.emotion-5 .emotion-8[aria-checked='false'] .emotion-12 {
  fill: #ffffff;
  stroke: #d9dadd;
}

.emotion-7 {
  position: absolute;
  white-space: nowrap;
  height: 1.5rem;
  width: 1.5rem;
  opacity: 0;
  border-width: 0;
}

.emotion-7:not(:disabled) {
  cursor: pointer;
}

.emotion-7:disabled {
  cursor: not-allowed;
}

.emotion-7:not(:disabled):checked+.emotion-10,
.emotion-7:not(:disabled)[aria-checked='mixed']+.emotion-10 {
  fill: #8c40ef;
}

.emotion-7:not(:disabled):checked+.emotion-10 .emotion-12,
.emotion-7:not(:disabled)[aria-checked='mixed']+.emotion-10 .emotion-12 {
  stroke: #8c40ef;
}

.emotion-7:not(:disabled)[aria-invalid='true']+.emotion-10,
.emotion-7:not(:disabled)[aria-invalid='mixed']+.emotion-10 {
  fill: #ffebf2;
}

.emotion-7:not(:disabled)[aria-invalid='true']+.emotion-10 .emotion-12,
.emotion-7:not(:disabled)[aria-invalid='mixed']+.emotion-10 .emotion-12 {
  stroke: #b3144d;
}

.emotion-7:focus+.emotion-10 {
  background-color: #f1eefc;
  fill: #ffebf2;
  outline: 1px solid 0px 0px 0px 3px #8c40ef40;
}

.emotion-7:focus+.emotion-10 .emotion-12 {
  stroke: #792dd4;
  fill: #e5dbfd;
}

.emotion-7[aria-invalid='true']:focus+.emotion-10 {
  background-color: #ffebf2;
  fill: #ffebf2;
  outline: 1px solid 0px 0px 0px 3px #f91b6c40;
}

.emotion-7[aria-invalid='true']:focus+.emotion-10 .emotion-12 {
  stroke: #92103f;
  fill: #ffd3e3;
}

.emotion-9 {
  border-radius: 0.25rem;
  height: 1.5rem;
  width: 1.5rem;
  min-width: 1.5rem;
  min-height: 1.5rem;
}

.emotion-9 path {
  fill: #ffffff;
  -webkit-transform: translate(2px, 2px);
  -moz-transform: translate(2px, 2px);
  -ms-transform: translate(2px, 2px);
  transform: translate(2px, 2px);
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.emotion-11 {
  fill: #ffffff;
  stroke: #d9dadd;
}

.emotion-13 {
  width: 100%;
  cursor: pointer;
}

<div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.5rem_xxsmall__toi52u7 styles_justifyContent_normal_xxsmall__toi52u5d"
    >
      <fieldset
        class="emotion-0 emotion-1"
      >
        <div
          class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.75rem_xxsmall__toi52u27 styles_justifyContent_normal_xxsmall__toi52u5d"
        >
          <legend
            class="styles_default__17td3g92 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_default__m4c9owi style_variant_bodyStrong__m4c9owq style_disabled_false__m4c9ow1b style_undefined_compound_24__m4c9ow20 style_undefined_compound_72__m4c9ow3c"
          >
            Label
          </legend>
          <div
            class="styles__x6hyh50 styles_gap_1rem_xxsmall__x6hyh5d"
            style="--_3mg8xe0: repeat(1, minmax(0, 1fr)); --_3mg8xe1: repeat(1, minmax(0, 1fr)); --_3mg8xe2: repeat(1, minmax(0, 1fr)); --_3mg8xe3: repeat(1, minmax(0, 1fr)); --_3mg8xe4: repeat(1, minmax(0, 1fr)); --_3mg8xe5: repeat(1, minmax(0, 1fr));"
          >
            <div
              class="emotion-2 emotion-3 styles__toi52u0 styles_alignItems_start_xxsmall__toi52u3j styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.25rem_xxsmall__toi52u1v styles_justifyContent_normal_xxsmall__toi52u5d"
              data-checked="true"
              data-disabled="false"
              data-error="false"
              data-has-default-cursor="false"
              data-has-label="true"
              data-image="none"
              data-type="checkbox"
              role="button"
              style="--_4k0ekn3: 1;"
              tabindex="0"
            >
              <div
                aria-disabled="false"
                class="emotion-4 emotion-5 emotion-6"
                data-checked="true"
                data-error="false"
              >
                <input
                  aria-checked="true"
                  aria-invalid="false"
                  checked=""
                  class="emotion-7 emotion-8"
                  id="«r2»"
                  name="checkbox"
                  tabindex="-1"
                  type="checkbox"
                  value="value-1"
                />
                <svg
                  class="emotion-9 emotion-10"
                  fill="none"
                  viewBox="0 0 24 24"
                >
                  <g>
                    <rect
                      class="emotion-11 emotion-12"
                      height="16"
                      rx="0.125rem"
                      stroke-width="2"
                      width="16"
                      x="4"
                      y="4"
                    />
                    <path
                      clip-rule="evenodd"
                      d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
                      fill="white"
                      fill-rule="evenodd"
                      height="9"
                      width="12"
                      x="5"
                      y="4"
                    />
                  </g>
                </svg>
                <div
                  class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.25rem_xxsmall__toi52u1v styles_justifyContent_normal_xxsmall__toi52u5d"
                  style="--_4k0ekn3: 1;"
                >
                  <div
                    class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52u3d styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.25rem_xxsmall__toi52u1v styles_justifyContent_normal_xxsmall__toi52u5d"
                    style="--_4k0ekn3: 1;"
                  >
                    <label
                      class="emotion-13 emotion-14 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_default__m4c9owi style_variant_body__m4c9owm style_disabled_false__m4c9ow1b style_undefined_compound_24__m4c9ow20 style_undefined_compound_72__m4c9ow3c"
                      for="«r2»"
                    >
                      Checkbox 1
                    </label>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="emotion-2 emotion-3 styles__toi52u0 styles_alignItems_start_xxsmall__toi52u3j styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.25rem_xxsmall__toi52u1v styles_justifyContent_normal_xxsmall__toi52u5d"
              data-checked="false"
              data-disabled="false"
              data-error="false"
              data-has-default-cursor="false"
              data-has-label="true"
              data-image="none"
              data-type="checkbox"
              role="button"
              style="--_4k0ekn3: 1;"
              tabindex="0"
            >
              <div
                aria-disabled="false"
                class="emotion-4 emotion-5 emotion-6"
                data-checked="false"
                data-error="false"
              >
                <input
                  aria-checked="false"
                  aria-invalid="false"
                  class="emotion-7 emotion-8"
                  id="«r6»"
                  name="checkbox"
                  tabindex="-1"
                  type="checkbox"
                  value="value-2"
                />
                <svg
                  class="emotion-9 emotion-10"
                  fill="none"
                  viewBox="0 0 24 24"
                >
                  <g>
                    <rect
                      class="emotion-11 emotion-12"
                      height="16"
                      rx="0.125rem"
                      stroke-width="2"
                      width="16"
                      x="4"
                      y="4"
                    />
                    <path
                      clip-rule="evenodd"
                      d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
                      fill="white"
                      fill-rule="evenodd"
                      height="9"
                      width="12"
                      x="5"
                      y="4"
                    />
                  </g>
                </svg>
                <div
                  class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.25rem_xxsmall__toi52u1v styles_justifyContent_normal_xxsmall__toi52u5d"
                  style="--_4k0ekn3: 1;"
                >
                  <div
                    class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52u3d styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.25rem_xxsmall__toi52u1v styles_justifyContent_normal_xxsmall__toi52u5d"
                    style="--_4k0ekn3: 1;"
                  >
                    <label
                      class="emotion-13 emotion-14 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_default__m4c9owi style_variant_body__m4c9owm style_disabled_false__m4c9ow1b style_undefined_compound_24__m4c9ow20 style_undefined_compound_72__m4c9ow3c"
                      for="«r6»"
                    >
                      Checkbox 2
                    </label>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </fieldset>
    </div>
  </div>
</DocumentFragment>
`;

exports[`selectableCardGroup > renders correctly as a radio 1`] = `
<DocumentFragment>
  .emotion-0 {
  border: none;
  padding: 0;
  margin: 0;
}

.emotion-2 {
  position: relative;
  padding: 1rem;
  border-radius: 0.25rem;
  -webkit-transition: border-color 200ms ease,box-shadow 200ms ease;
  transition: border-color 200ms ease,box-shadow 200ms ease;
  cursor: pointer;
  background: #ffffff;
  border: 1px solid #d9dadd;
  color: #3f4250;
}

.emotion-2[data-has-label='false']>:first-child {
  margin-bottom: -0.25rem;
}

.emotion-2[data-has-default-cursor='true'] {
  cursor: default;
}

.emotion-2[data-checked='true'] {
  border: 1px solid #8c40ef;
}

.emotion-2[data-error='true'] {
  border: 1px solid #b3144d;
}

.emotion-2[data-disabled='true'] {
  border: 1px solid #e9eaeb;
  color: #b5b7bd;
  background: #f3f3f4;
  cursor: not-allowed;
}

.emotion-2[data-image="illustration"] {
  padding: 0rem;
}

.emotion-2[data-image="icon"] {
  padding: 0rem;
  padding-right: 1rem;
}

.emotion-2:hover:not([data-error='true']):not([data-disabled='true']),
.emotion-2:active:not([data-error='true']):not([data-disabled='true']) {
  border: 1px solid #8c40ef;
}

.emotion-2:hover:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.emotion-2:active:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'] {
  box-shadow: 0px 4px 16px 4px #f6f3ffcc;
}

.emotion-2[data-has-label='true'] styles__17da2jl1,
.emotion-2[data-has-label='true'] .eqr7bqq0 {
  width: 100%;
}

.emotion-4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.emotion-4[data-checked='true'] {
  color: #641cb3;
}

.emotion-4[data-error='true'] {
  color: #b3144d;
}

.emotion-4[aria-disabled='true'] {
  color: #b5b7bd;
}

.emotion-4 input+svg {
  display: none;
}

.emotion-4:hover[aria-disabled='false']:not([data-checked='true']) styles__17da2jl6+styles__17da2jl7 {
  fill: #d9dadd;
}

.emotion-4:hover[aria-disabled='false']:not([data-checked='true']) styles__17da2jl6+styles__17da2jl7 styles__17da2jl0 {
  fill: #ffffff;
}

.emotion-4:hover[aria-disabled='false']:not([data-checked='true']) styles__17da2jl6[aria-invalid='true']+styles__17da2jl7 {
  fill: #b3144d;
}

.emotion-4:hover[aria-disabled='false']:not([data-checked='true']) styles__17da2jl6[aria-invalid='true']+styles__17da2jl7 styles__17da2jl0 {
  fill: #ffffff;
}

.emotion-4:hover[aria-disabled='false'] styles__17da2jl6+styles__17da2jl7 {
  fill: #8c40ef;
}

.emotion-4:hover[aria-disabled='false'] styles__17da2jl6+styles__17da2jl7 styles__17da2jl0 {
  fill: #ffffff;
}

.emotion-4:hover[aria-disabled='false'] styles__17da2jl6[aria-invalid='true']+styles__17da2jl7 {
  fill: #b3144d;
}

.emotion-4:hover[aria-disabled='false'] styles__17da2jl6[aria-invalid='true']+styles__17da2jl7 styles__17da2jl0 {
  fill: #ffffff;
}

.emotion-4 styles__17da2jl6[aria-disabled='false']:active+styles__17da2jl7 {
  background: none;
  fill: #8c40ef;
}

.emotion-4 styles__17da2jl6[aria-disabled='false']:active+styles__17da2jl7 styles__17da2jl0 {
  fill: #ffffff;
}

<div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.5rem_xxsmall__toi52u7 styles_justifyContent_normal_xxsmall__toi52u5d"
    >
      <fieldset
        class="emotion-0 emotion-1"
      >
        <div
          class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.75rem_xxsmall__toi52u27 styles_justifyContent_normal_xxsmall__toi52u5d"
        >
          <legend
            class="styles_default__17td3g92 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_default__m4c9owi style_variant_bodyStrong__m4c9owq style_disabled_false__m4c9ow1b style_undefined_compound_24__m4c9ow20 style_undefined_compound_72__m4c9ow3c"
          >
            Label
          </legend>
          <div
            class="styles__x6hyh50 styles_gap_1rem_xxsmall__x6hyh5d"
            style="--_3mg8xe0: repeat(1, minmax(0, 1fr)); --_3mg8xe1: repeat(1, minmax(0, 1fr)); --_3mg8xe2: repeat(1, minmax(0, 1fr)); --_3mg8xe3: repeat(1, minmax(0, 1fr)); --_3mg8xe4: repeat(1, minmax(0, 1fr)); --_3mg8xe5: repeat(1, minmax(0, 1fr));"
          >
            <div
              class="emotion-2 emotion-3 styles__toi52u0 styles_alignItems_start_xxsmall__toi52u3j styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.25rem_xxsmall__toi52u1v styles_justifyContent_normal_xxsmall__toi52u5d"
              data-checked="true"
              data-disabled="false"
              data-error="true"
              data-has-default-cursor="false"
              data-has-label="true"
              data-image="none"
              data-type="radio"
              role="button"
              style="--_4k0ekn3: 1;"
              tabindex="0"
            >
              <div
                class="styles__17da2jl1 styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.25rem_xxsmall__toi52u1v styles_justifyContent_normal_xxsmall__toi52u5d"
              >
                <div
                  aria-disabled="false"
                  class="emotion-4 emotion-5 styles__17da2jl3"
                  data-checked="true"
                  data-error="true"
                >
                  <input
                    aria-disabled="false"
                    aria-invalid="true"
                    checked=""
                    class="styles__17da2jl6"
                    id="«r1i»"
                    name="radio"
                    tabindex="-1"
                    type="radio"
                    value="value-1"
                  />
                  <svg
                    class="styles__17da2jl7"
                    viewBox="0 0 24 24"
                  >
                    <g>
                      <circle
                        cx="12"
                        cy="12"
                        r="10"
                        stroke-width="2"
                      />
                      <circle
                        class="styles__17da2jl0"
                        cx="12"
                        cy="12"
                        r="8"
                      />
                      <circle
                        class="styles__17da2jl8"
                        cx="12"
                        cy="12"
                        r="5"
                      />
                    </g>
                  </svg>
                  <label
                    class="styles__17da2jl4 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_prominence_default__m4c9owi style_variant_body__m4c9owm style_disabled_false__m4c9ow1b style_undefined_compound_72__m4c9ow3c"
                    for="«r1i»"
                  >
                    Radio 1
                  </label>
                </div>
              </div>
            </div>
            <div
              class="emotion-2 emotion-3 styles__toi52u0 styles_alignItems_start_xxsmall__toi52u3j styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.25rem_xxsmall__toi52u1v styles_justifyContent_normal_xxsmall__toi52u5d"
              data-checked="false"
              data-disabled="false"
              data-error="true"
              data-has-default-cursor="false"
              data-has-label="true"
              data-image="none"
              data-type="radio"
              role="button"
              style="--_4k0ekn3: 1;"
              tabindex="0"
            >
              <div
                class="styles__17da2jl1 styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.25rem_xxsmall__toi52u1v styles_justifyContent_normal_xxsmall__toi52u5d"
              >
                <div
                  aria-disabled="false"
                  class="emotion-4 emotion-5 styles__17da2jl3"
                  data-checked="false"
                  data-error="true"
                >
                  <input
                    aria-disabled="false"
                    aria-invalid="true"
                    class="styles__17da2jl6"
                    id="«r1m»"
                    name="radio"
                    tabindex="-1"
                    type="radio"
                    value="value-2"
                  />
                  <svg
                    class="styles__17da2jl7"
                    viewBox="0 0 24 24"
                  >
                    <g>
                      <circle
                        cx="12"
                        cy="12"
                        r="10"
                        stroke-width="2"
                      />
                      <circle
                        class="styles__17da2jl0"
                        cx="12"
                        cy="12"
                        r="8"
                      />
                      <circle
                        class="styles__17da2jl8"
                        cx="12"
                        cy="12"
                        r="5"
                      />
                    </g>
                  </svg>
                  <label
                    class="styles__17da2jl4 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_prominence_default__m4c9owi style_variant_body__m4c9owm style_disabled_false__m4c9ow1b style_undefined_compound_72__m4c9ow3c"
                    for="«r1m»"
                  >
                    Radio 2
                  </label>
                </div>
              </div>
            </div>
          </div>
        </div>
      </fieldset>
      <span
        class="style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_danger__m4c9owd style_prominence_default__m4c9owi style_variant_caption__m4c9ows style_disabled_false__m4c9ow1b style_undefined_compound_8__m4c9ow1k style_undefined_compound_72__m4c9ow3c"
      >
        Error content
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`selectableCardGroup > renders correctly required and showTick 1`] = `
<DocumentFragment>
  .emotion-0 {
  border: none;
  padding: 0;
  margin: 0;
}

.emotion-2 {
  position: relative;
  padding: 1rem;
  border-radius: 0.25rem;
  -webkit-transition: border-color 200ms ease,box-shadow 200ms ease;
  transition: border-color 200ms ease,box-shadow 200ms ease;
  cursor: pointer;
  background: #ffffff;
  border: 1px solid #d9dadd;
  color: #3f4250;
}

.emotion-2[data-has-label='false']>:first-child {
  margin-bottom: -0.25rem;
}

.emotion-2[data-has-default-cursor='true'] {
  cursor: default;
}

.emotion-2[data-checked='true'] {
  border: 1px solid #8c40ef;
}

.emotion-2[data-error='true'] {
  border: 1px solid #b3144d;
}

.emotion-2[data-disabled='true'] {
  border: 1px solid #e9eaeb;
  color: #b5b7bd;
  background: #f3f3f4;
  cursor: not-allowed;
}

.emotion-2[data-image="illustration"] {
  padding: 0rem;
}

.emotion-2[data-image="icon"] {
  padding: 0rem;
  padding-right: 1rem;
}

.emotion-2:hover:not([data-error='true']):not([data-disabled='true']),
.emotion-2:active:not([data-error='true']):not([data-disabled='true']) {
  border: 1px solid #8c40ef;
}

.emotion-2:hover:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.emotion-2:active:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'] {
  box-shadow: 0px 4px 16px 4px #f6f3ffcc;
}

.emotion-2[data-has-label='true'] styles__17da2jl1,
.emotion-2[data-has-label='true'] .emotion-6 {
  width: 100%;
}

.emotion-5 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.5rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.emotion-5 .eqr7bqq3 {
  cursor: pointer;
}

.emotion-5[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.emotion-5[aria-disabled='true'] .eqr7bqq3 {
  cursor: not-allowed;
}

.emotion-5[aria-disabled='true'] .emotion-10 {
  fill: #e9eaeb;
}

.emotion-5[aria-disabled='true'] .emotion-10 .emotion-12 {
  stroke: #d9dadd;
  fill: #f3f3f4;
}

.emotion-5[aria-disabled='true'] .emotion-8[aria-invalid="true"]:checked+.emotion-10 {
  fill: #ffd3e3;
}

.emotion-5[aria-disabled='true'] .emotion-8[aria-invalid="true"]:checked+.emotion-10 .emotion-12 {
  stroke: #ffd3e3;
  fill: #ffd3e3;
}

.emotion-5[aria-disabled='true'] .emotion-8[aria-invalid="true"]+.emotion-10 {
  fill: #ffebf2;
}

.emotion-5[aria-disabled='true'] .emotion-8[aria-invalid="true"]+.emotion-10 .emotion-12 {
  stroke: #ffbbd3;
  fill: #ffebf2;
}

.emotion-5[aria-disabled='true'] .emotion-8:checked+.emotion-10 {
  fill: #e5dbfd;
}

.emotion-5[aria-disabled='true'] .emotion-8:checked+.emotion-10 .emotion-12 {
  stroke: #d8c5fc;
  fill: #d8c5fc;
}

.emotion-5[aria-disabled='true'] .emotion-8[aria-checked="mixed"]+.emotion-10 {
  fill: #e5dbfd;
}

.emotion-5[aria-disabled='true'] .emotion-8[aria-checked="mixed"]+.emotion-10 .emotion-12 {
  stroke: #e5dbfd;
  fill: #e5dbfd;
}

.emotion-5 .emotion-8:checked+.emotion-10 path {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transform: translate(2px, 2px);
  -moz-transform: translate(2px, 2px);
  -ms-transform: translate(2px, 2px);
  transform: translate(2px, 2px);
}

.emotion-5 .emotion-8:checked+.emotion-10 .emotion-12 {
  fill: #8c40ef;
  stroke: #8c40ef;
}

.emotion-5 .emotion-8[aria-invalid="true"]:checked+.emotion-10 .emotion-12 {
  fill: #e51963;
  stroke: #e51963;
}

.emotion-5 .emotion-8[aria-checked="mixed"]+.emotion-10 .eqr7bqq5 {
  fill: #ffffff;
}

.emotion-5 .emotion-8[aria-checked="mixed"]+.emotion-10 .emotion-12 {
  fill: #8c40ef;
  stroke: #8c40ef;
}

.emotion-5:hover[aria-disabled='false'] .emotion-8[aria-invalid='false'][aria-checked='false']+.emotion-10 .emotion-12 {
  stroke: #792dd4;
  fill: #e5dbfd;
}

.emotion-5:hover[aria-disabled='false'] .emotion-8[aria-invalid='false'][aria-checked='true']+.emotion-10 .emotion-12 {
  stroke: #792dd4;
  fill: #792dd4;
}

.emotion-5:hover[aria-disabled='false'] .emotion-8[aria-invalid='false'][aria-checked='mixed']+.emotion-10 .emotion-12 {
  stroke: #792dd4;
  fill: #792dd4;
}

.emotion-5:hover[aria-disabled='false'] .emotion-8[aria-invalid='true'][aria-checked='false']+.emotion-10 .emotion-12 {
  stroke: #92103f;
  fill: #ffd3e3;
}

.emotion-5:hover[aria-disabled='false'] .emotion-8[aria-invalid='true'][aria-checked='true']+.emotion-10 .emotion-12 {
  stroke: #d6175c;
  fill: #d6175c;
}

.emotion-5 .emotion-8[aria-invalid="true"]+.emotion-10 {
  fill: #e51963;
}

.emotion-5 .emotion-8[aria-invalid="true"]+.emotion-10 .emotion-12 {
  stroke: #e51963;
  fill: #ffebf2;
}

.emotion-5[data-checked='true'] {
  color: #641cb3;
}

.emotion-5[data-error='true'] {
  color: #b3144d;
}

.emotion-5[aria-disabled='true'] {
  color: #b5b7bd;
}

.emotion-5 label {
  width: 100%;
}

.emotion-5:hover[aria-disabled='false'] .emotion-8[aria-invalid='false'][aria-checked='false']+.emotion-10 .emotion-12 {
  fill: #ffffff;
  stroke: #d9dadd;
}

.emotion-5:hover[aria-disabled='false'] .emotion-8[aria-invalid='false'][aria-checked='true']+.emotion-10 .emotion-12 {
  stroke: #8c40ef;
  fill: #8c40ef;
}

.emotion-5:hover[aria-disabled='false'] .emotion-8[aria-invalid='false'][aria-checked='mixed']+.emotion-10 .emotion-12 {
  stroke: #8c40ef;
  fill: #8c40ef;
}

.emotion-5 .emotion-8:focus+.emotion-10,
.emotion-5 .emotion-8:active+.emotion-10 {
  outline: none;
  background-color: #ffffff;
  fill: #ffffff;
}

.emotion-5 .emotion-8[aria-checked='false'] .emotion-12 {
  fill: #ffffff;
  stroke: #d9dadd;
}

.emotion-7 {
  position: absolute;
  white-space: nowrap;
  height: 1.5rem;
  width: 1.5rem;
  opacity: 0;
  border-width: 0;
}

.emotion-7:not(:disabled) {
  cursor: pointer;
}

.emotion-7:disabled {
  cursor: not-allowed;
}

.emotion-7:not(:disabled):checked+.emotion-10,
.emotion-7:not(:disabled)[aria-checked='mixed']+.emotion-10 {
  fill: #8c40ef;
}

.emotion-7:not(:disabled):checked+.emotion-10 .emotion-12,
.emotion-7:not(:disabled)[aria-checked='mixed']+.emotion-10 .emotion-12 {
  stroke: #8c40ef;
}

.emotion-7:not(:disabled)[aria-invalid='true']+.emotion-10,
.emotion-7:not(:disabled)[aria-invalid='mixed']+.emotion-10 {
  fill: #ffebf2;
}

.emotion-7:not(:disabled)[aria-invalid='true']+.emotion-10 .emotion-12,
.emotion-7:not(:disabled)[aria-invalid='mixed']+.emotion-10 .emotion-12 {
  stroke: #b3144d;
}

.emotion-7:focus+.emotion-10 {
  background-color: #f1eefc;
  fill: #ffebf2;
  outline: 1px solid 0px 0px 0px 3px #8c40ef40;
}

.emotion-7:focus+.emotion-10 .emotion-12 {
  stroke: #792dd4;
  fill: #e5dbfd;
}

.emotion-7[aria-invalid='true']:focus+.emotion-10 {
  background-color: #ffebf2;
  fill: #ffebf2;
  outline: 1px solid 0px 0px 0px 3px #f91b6c40;
}

.emotion-7[aria-invalid='true']:focus+.emotion-10 .emotion-12 {
  stroke: #92103f;
  fill: #ffd3e3;
}

.emotion-9 {
  border-radius: 0.25rem;
  height: 1.5rem;
  width: 1.5rem;
  min-width: 1.5rem;
  min-height: 1.5rem;
}

.emotion-9 path {
  fill: #ffffff;
  -webkit-transform: translate(2px, 2px);
  -moz-transform: translate(2px, 2px);
  -ms-transform: translate(2px, 2px);
  transform: translate(2px, 2px);
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.emotion-11 {
  fill: #ffffff;
  stroke: #d9dadd;
}

.emotion-13 {
  width: 100%;
  cursor: pointer;
}

<div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.5rem_xxsmall__toi52u7 styles_justifyContent_normal_xxsmall__toi52u5d"
    >
      <fieldset
        class="emotion-0 emotion-1"
      >
        <div
          class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.75rem_xxsmall__toi52u27 styles_justifyContent_normal_xxsmall__toi52u5d"
        >
          <div
            class="styles__toi52u0 styles_alignItems_start_xxsmall__toi52u3j styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.25rem_xxsmall__toi52u1v styles_justifyContent_normal_xxsmall__toi52u5d"
          >
            <legend
              class="styles_default__17td3g92 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_default__m4c9owi style_variant_bodyStrong__m4c9owq style_disabled_false__m4c9ow1b style_undefined_compound_24__m4c9ow20 style_undefined_compound_72__m4c9ow3c"
            >
              Label
            </legend>
            <span
              class="style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_danger__m4c9owd style_prominence_default__m4c9owi style_variant_bodyStrong__m4c9owq style_disabled_false__m4c9ow1b style_undefined_compound_8__m4c9ow1k style_undefined_compound_72__m4c9ow3c"
            >
              *
            </span>
          </div>
          <div
            class="styles__x6hyh50 styles_gap_1rem_xxsmall__x6hyh5d"
            style="--_3mg8xe0: repeat(1, minmax(0, 1fr)); --_3mg8xe1: repeat(1, minmax(0, 1fr)); --_3mg8xe2: repeat(1, minmax(0, 1fr)); --_3mg8xe3: repeat(1, minmax(0, 1fr)); --_3mg8xe4: repeat(1, minmax(0, 1fr)); --_3mg8xe5: repeat(1, minmax(0, 1fr));"
          >
            <div
              class="emotion-2 emotion-3 styles__toi52u0 styles_alignItems_start_xxsmall__toi52u3j styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.25rem_xxsmall__toi52u1v styles_justifyContent_normal_xxsmall__toi52u5d"
              data-checked="true"
              data-disabled="false"
              data-error="false"
              data-has-default-cursor="false"
              data-has-label="true"
              data-image="none"
              data-type="checkbox"
              role="button"
              style="--_4k0ekn3: 1;"
              tabindex="0"
            >
              <div
                aria-disabled="false"
                class="emotion-4 emotion-5 emotion-6"
                data-checked="true"
                data-error="false"
              >
                <input
                  aria-checked="true"
                  aria-invalid="false"
                  checked=""
                  class="emotion-7 emotion-8"
                  id="«rv»"
                  name="checkbox"
                  tabindex="-1"
                  type="checkbox"
                  value="value-1"
                />
                <svg
                  class="emotion-9 emotion-10"
                  fill="none"
                  viewBox="0 0 24 24"
                >
                  <g>
                    <rect
                      class="emotion-11 emotion-12"
                      height="16"
                      rx="0.125rem"
                      stroke-width="2"
                      width="16"
                      x="4"
                      y="4"
                    />
                    <path
                      clip-rule="evenodd"
                      d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
                      fill="white"
                      fill-rule="evenodd"
                      height="9"
                      width="12"
                      x="5"
                      y="4"
                    />
                  </g>
                </svg>
                <div
                  class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.25rem_xxsmall__toi52u1v styles_justifyContent_normal_xxsmall__toi52u5d"
                  style="--_4k0ekn3: 1;"
                >
                  <div
                    class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52u3d styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.25rem_xxsmall__toi52u1v styles_justifyContent_normal_xxsmall__toi52u5d"
                    style="--_4k0ekn3: 1;"
                  >
                    <label
                      class="emotion-13 emotion-14 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_default__m4c9owi style_variant_body__m4c9owm style_disabled_false__m4c9ow1b style_undefined_compound_24__m4c9ow20 style_undefined_compound_72__m4c9ow3c"
                      for="«rv»"
                    >
                      Checkbox 1
                    </label>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="emotion-2 emotion-3 styles__toi52u0 styles_alignItems_start_xxsmall__toi52u3j styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.25rem_xxsmall__toi52u1v styles_justifyContent_normal_xxsmall__toi52u5d"
              data-checked="false"
              data-disabled="false"
              data-error="false"
              data-has-default-cursor="false"
              data-has-label="true"
              data-image="none"
              data-type="checkbox"
              role="button"
              style="--_4k0ekn3: 1;"
              tabindex="0"
            >
              <div
                aria-disabled="false"
                class="emotion-4 emotion-5 emotion-6"
                data-checked="false"
                data-error="false"
              >
                <input
                  aria-checked="false"
                  aria-invalid="false"
                  class="emotion-7 emotion-8"
                  id="«r13»"
                  name="checkbox"
                  tabindex="-1"
                  type="checkbox"
                  value="value-2"
                />
                <svg
                  class="emotion-9 emotion-10"
                  fill="none"
                  viewBox="0 0 24 24"
                >
                  <g>
                    <rect
                      class="emotion-11 emotion-12"
                      height="16"
                      rx="0.125rem"
                      stroke-width="2"
                      width="16"
                      x="4"
                      y="4"
                    />
                    <path
                      clip-rule="evenodd"
                      d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
                      fill="white"
                      fill-rule="evenodd"
                      height="9"
                      width="12"
                      x="5"
                      y="4"
                    />
                  </g>
                </svg>
                <div
                  class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.25rem_xxsmall__toi52u1v styles_justifyContent_normal_xxsmall__toi52u5d"
                  style="--_4k0ekn3: 1;"
                >
                  <div
                    class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52u3d styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.25rem_xxsmall__toi52u1v styles_justifyContent_normal_xxsmall__toi52u5d"
                    style="--_4k0ekn3: 1;"
                  >
                    <label
                      class="emotion-13 emotion-14 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_default__m4c9owi style_variant_body__m4c9owm style_disabled_false__m4c9ow1b style_undefined_compound_24__m4c9ow20 style_undefined_compound_72__m4c9ow3c"
                      for="«r13»"
                    >
                      Checkbox 2
                    </label>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </fieldset>
    </div>
  </div>
</DocumentFragment>
`;

exports[`selectableCardGroup > renders correctly with direction multiple columns 1`] = `
<DocumentFragment>
  .emotion-0 {
  border: none;
  padding: 0;
  margin: 0;
}

.emotion-2 {
  position: relative;
  padding: 1rem;
  border-radius: 0.25rem;
  -webkit-transition: border-color 200ms ease,box-shadow 200ms ease;
  transition: border-color 200ms ease,box-shadow 200ms ease;
  cursor: pointer;
  background: #ffffff;
  border: 1px solid #d9dadd;
  color: #3f4250;
}

.emotion-2[data-has-label='false']>:first-child {
  margin-bottom: -0.25rem;
}

.emotion-2[data-has-default-cursor='true'] {
  cursor: default;
}

.emotion-2[data-checked='true'] {
  border: 1px solid #8c40ef;
}

.emotion-2[data-error='true'] {
  border: 1px solid #b3144d;
}

.emotion-2[data-disabled='true'] {
  border: 1px solid #e9eaeb;
  color: #b5b7bd;
  background: #f3f3f4;
  cursor: not-allowed;
}

.emotion-2[data-image="illustration"] {
  padding: 0rem;
}

.emotion-2[data-image="icon"] {
  padding: 0rem;
  padding-right: 1rem;
}

.emotion-2:hover:not([data-error='true']):not([data-disabled='true']),
.emotion-2:active:not([data-error='true']):not([data-disabled='true']) {
  border: 1px solid #8c40ef;
}

.emotion-2:hover:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.emotion-2:active:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'] {
  box-shadow: 0px 4px 16px 4px #f6f3ffcc;
}

.emotion-2[data-has-label='true'] styles__17da2jl1,
.emotion-2[data-has-label='true'] .emotion-6 {
  width: 100%;
}

.emotion-5 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.5rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.emotion-5 .eqr7bqq3 {
  cursor: pointer;
}

.emotion-5[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.emotion-5[aria-disabled='true'] .eqr7bqq3 {
  cursor: not-allowed;
}

.emotion-5[aria-disabled='true'] .emotion-10 {
  fill: #e9eaeb;
}

.emotion-5[aria-disabled='true'] .emotion-10 .emotion-12 {
  stroke: #d9dadd;
  fill: #f3f3f4;
}

.emotion-5[aria-disabled='true'] .emotion-8[aria-invalid="true"]:checked+.emotion-10 {
  fill: #ffd3e3;
}

.emotion-5[aria-disabled='true'] .emotion-8[aria-invalid="true"]:checked+.emotion-10 .emotion-12 {
  stroke: #ffd3e3;
  fill: #ffd3e3;
}

.emotion-5[aria-disabled='true'] .emotion-8[aria-invalid="true"]+.emotion-10 {
  fill: #ffebf2;
}

.emotion-5[aria-disabled='true'] .emotion-8[aria-invalid="true"]+.emotion-10 .emotion-12 {
  stroke: #ffbbd3;
  fill: #ffebf2;
}

.emotion-5[aria-disabled='true'] .emotion-8:checked+.emotion-10 {
  fill: #e5dbfd;
}

.emotion-5[aria-disabled='true'] .emotion-8:checked+.emotion-10 .emotion-12 {
  stroke: #d8c5fc;
  fill: #d8c5fc;
}

.emotion-5[aria-disabled='true'] .emotion-8[aria-checked="mixed"]+.emotion-10 {
  fill: #e5dbfd;
}

.emotion-5[aria-disabled='true'] .emotion-8[aria-checked="mixed"]+.emotion-10 .emotion-12 {
  stroke: #e5dbfd;
  fill: #e5dbfd;
}

.emotion-5 .emotion-8:checked+.emotion-10 path {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transform: translate(2px, 2px);
  -moz-transform: translate(2px, 2px);
  -ms-transform: translate(2px, 2px);
  transform: translate(2px, 2px);
}

.emotion-5 .emotion-8:checked+.emotion-10 .emotion-12 {
  fill: #8c40ef;
  stroke: #8c40ef;
}

.emotion-5 .emotion-8[aria-invalid="true"]:checked+.emotion-10 .emotion-12 {
  fill: #e51963;
  stroke: #e51963;
}

.emotion-5 .emotion-8[aria-checked="mixed"]+.emotion-10 .eqr7bqq5 {
  fill: #ffffff;
}

.emotion-5 .emotion-8[aria-checked="mixed"]+.emotion-10 .emotion-12 {
  fill: #8c40ef;
  stroke: #8c40ef;
}

.emotion-5:hover[aria-disabled='false'] .emotion-8[aria-invalid='false'][aria-checked='false']+.emotion-10 .emotion-12 {
  stroke: #792dd4;
  fill: #e5dbfd;
}

.emotion-5:hover[aria-disabled='false'] .emotion-8[aria-invalid='false'][aria-checked='true']+.emotion-10 .emotion-12 {
  stroke: #792dd4;
  fill: #792dd4;
}

.emotion-5:hover[aria-disabled='false'] .emotion-8[aria-invalid='false'][aria-checked='mixed']+.emotion-10 .emotion-12 {
  stroke: #792dd4;
  fill: #792dd4;
}

.emotion-5:hover[aria-disabled='false'] .emotion-8[aria-invalid='true'][aria-checked='false']+.emotion-10 .emotion-12 {
  stroke: #92103f;
  fill: #ffd3e3;
}

.emotion-5:hover[aria-disabled='false'] .emotion-8[aria-invalid='true'][aria-checked='true']+.emotion-10 .emotion-12 {
  stroke: #d6175c;
  fill: #d6175c;
}

.emotion-5 .emotion-8[aria-invalid="true"]+.emotion-10 {
  fill: #e51963;
}

.emotion-5 .emotion-8[aria-invalid="true"]+.emotion-10 .emotion-12 {
  stroke: #e51963;
  fill: #ffebf2;
}

.emotion-5[data-checked='true'] {
  color: #641cb3;
}

.emotion-5[data-error='true'] {
  color: #b3144d;
}

.emotion-5[aria-disabled='true'] {
  color: #b5b7bd;
}

.emotion-5 input+svg {
  display: none;
}

.emotion-5 label {
  width: 100%;
}

.emotion-5:hover[aria-disabled='false'] .emotion-8[aria-invalid='false'][aria-checked='false']+.emotion-10 .emotion-12 {
  fill: #ffffff;
  stroke: #d9dadd;
}

.emotion-5:hover[aria-disabled='false'] .emotion-8[aria-invalid='false'][aria-checked='true']+.emotion-10 .emotion-12 {
  stroke: #8c40ef;
  fill: #8c40ef;
}

.emotion-5:hover[aria-disabled='false'] .emotion-8[aria-invalid='false'][aria-checked='mixed']+.emotion-10 .emotion-12 {
  stroke: #8c40ef;
  fill: #8c40ef;
}

.emotion-5 .emotion-8:focus+.emotion-10,
.emotion-5 .emotion-8:active+.emotion-10 {
  outline: none;
  background-color: #ffffff;
  fill: #ffffff;
}

.emotion-5 .emotion-8[aria-checked='false'] .emotion-12 {
  fill: #ffffff;
  stroke: #d9dadd;
}

.emotion-7 {
  position: absolute;
  white-space: nowrap;
  height: 1.5rem;
  width: 1.5rem;
  opacity: 0;
  border-width: 0;
}

.emotion-7:not(:disabled) {
  cursor: pointer;
}

.emotion-7:disabled {
  cursor: not-allowed;
}

.emotion-7:not(:disabled):checked+.emotion-10,
.emotion-7:not(:disabled)[aria-checked='mixed']+.emotion-10 {
  fill: #8c40ef;
}

.emotion-7:not(:disabled):checked+.emotion-10 .emotion-12,
.emotion-7:not(:disabled)[aria-checked='mixed']+.emotion-10 .emotion-12 {
  stroke: #8c40ef;
}

.emotion-7:not(:disabled)[aria-invalid='true']+.emotion-10,
.emotion-7:not(:disabled)[aria-invalid='mixed']+.emotion-10 {
  fill: #ffebf2;
}

.emotion-7:not(:disabled)[aria-invalid='true']+.emotion-10 .emotion-12,
.emotion-7:not(:disabled)[aria-invalid='mixed']+.emotion-10 .emotion-12 {
  stroke: #b3144d;
}

.emotion-7:focus+.emotion-10 {
  background-color: #f1eefc;
  fill: #ffebf2;
  outline: 1px solid 0px 0px 0px 3px #8c40ef40;
}

.emotion-7:focus+.emotion-10 .emotion-12 {
  stroke: #792dd4;
  fill: #e5dbfd;
}

.emotion-7[aria-invalid='true']:focus+.emotion-10 {
  background-color: #ffebf2;
  fill: #ffebf2;
  outline: 1px solid 0px 0px 0px 3px #f91b6c40;
}

.emotion-7[aria-invalid='true']:focus+.emotion-10 .emotion-12 {
  stroke: #92103f;
  fill: #ffd3e3;
}

.emotion-9 {
  border-radius: 0.25rem;
  height: 1.5rem;
  width: 1.5rem;
  min-width: 1.5rem;
  min-height: 1.5rem;
}

.emotion-9 path {
  fill: #ffffff;
  -webkit-transform: translate(2px, 2px);
  -moz-transform: translate(2px, 2px);
  -ms-transform: translate(2px, 2px);
  transform: translate(2px, 2px);
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.emotion-11 {
  fill: #ffffff;
  stroke: #d9dadd;
}

.emotion-13 {
  width: 100%;
  cursor: pointer;
}

<div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.5rem_xxsmall__toi52u7 styles_justifyContent_normal_xxsmall__toi52u5d"
    >
      <fieldset
        class="emotion-0 emotion-1"
      >
        <div
          class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.75rem_xxsmall__toi52u27 styles_justifyContent_normal_xxsmall__toi52u5d"
        >
          <legend
            class="styles_default__17td3g92 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_default__m4c9owi style_variant_bodyStrong__m4c9owq style_disabled_false__m4c9ow1b style_undefined_compound_24__m4c9ow20 style_undefined_compound_72__m4c9ow3c"
          >
            Label
          </legend>
          <div
            class="styles__x6hyh50 styles_gap_1rem_xxsmall__x6hyh5d"
            style="--_3mg8xe0: repeat(2, minmax(0, 1fr)); --_3mg8xe1: repeat(2, minmax(0, 1fr)); --_3mg8xe2: repeat(2, minmax(0, 1fr)); --_3mg8xe3: repeat(2, minmax(0, 1fr)); --_3mg8xe4: repeat(2, minmax(0, 1fr)); --_3mg8xe5: repeat(2, minmax(0, 1fr));"
          >
            <div
              class="emotion-2 emotion-3 styles__toi52u0 styles_alignItems_start_xxsmall__toi52u3j styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.25rem_xxsmall__toi52u1v styles_justifyContent_normal_xxsmall__toi52u5d"
              data-checked="true"
              data-disabled="false"
              data-error="false"
              data-has-default-cursor="false"
              data-has-label="true"
              data-image="none"
              data-type="checkbox"
              role="button"
              style="--_4k0ekn3: 1;"
              tabindex="0"
            >
              <div
                aria-disabled="false"
                class="emotion-4 emotion-5 emotion-6"
                data-checked="true"
                data-error="false"
              >
                <input
                  aria-checked="true"
                  aria-invalid="false"
                  checked=""
                  class="emotion-7 emotion-8"
                  id="«rb»"
                  name="checkbox"
                  tabindex="-1"
                  type="checkbox"
                  value="value-1"
                />
                <svg
                  class="emotion-9 emotion-10"
                  fill="none"
                  viewBox="0 0 24 24"
                >
                  <g>
                    <rect
                      class="emotion-11 emotion-12"
                      height="16"
                      rx="0.125rem"
                      stroke-width="2"
                      width="16"
                      x="4"
                      y="4"
                    />
                    <path
                      clip-rule="evenodd"
                      d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
                      fill="white"
                      fill-rule="evenodd"
                      height="9"
                      width="12"
                      x="5"
                      y="4"
                    />
                  </g>
                </svg>
                <div
                  class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.25rem_xxsmall__toi52u1v styles_justifyContent_normal_xxsmall__toi52u5d"
                  style="--_4k0ekn3: 1;"
                >
                  <div
                    class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52u3d styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.25rem_xxsmall__toi52u1v styles_justifyContent_normal_xxsmall__toi52u5d"
                    style="--_4k0ekn3: 1;"
                  >
                    <label
                      class="emotion-13 emotion-14 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_default__m4c9owi style_variant_body__m4c9owm style_disabled_false__m4c9ow1b style_undefined_compound_24__m4c9ow20 style_undefined_compound_72__m4c9ow3c"
                      for="«rb»"
                    >
                      Checkbox 1
                    </label>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="emotion-2 emotion-3 styles__toi52u0 styles_alignItems_start_xxsmall__toi52u3j styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.25rem_xxsmall__toi52u1v styles_justifyContent_normal_xxsmall__toi52u5d"
              data-checked="false"
              data-disabled="false"
              data-error="false"
              data-has-default-cursor="false"
              data-has-label="true"
              data-image="none"
              data-type="checkbox"
              role="button"
              style="--_4k0ekn3: 1;"
              tabindex="0"
            >
              <div
                aria-disabled="false"
                class="emotion-4 emotion-5 emotion-6"
                data-checked="false"
                data-error="false"
              >
                <input
                  aria-checked="false"
                  aria-invalid="false"
                  class="emotion-7 emotion-8"
                  id="«rf»"
                  name="checkbox"
                  tabindex="-1"
                  type="checkbox"
                  value="value-2"
                />
                <svg
                  class="emotion-9 emotion-10"
                  fill="none"
                  viewBox="0 0 24 24"
                >
                  <g>
                    <rect
                      class="emotion-11 emotion-12"
                      height="16"
                      rx="0.125rem"
                      stroke-width="2"
                      width="16"
                      x="4"
                      y="4"
                    />
                    <path
                      clip-rule="evenodd"
                      d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
                      fill="white"
                      fill-rule="evenodd"
                      height="9"
                      width="12"
                      x="5"
                      y="4"
                    />
                  </g>
                </svg>
                <div
                  class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.25rem_xxsmall__toi52u1v styles_justifyContent_normal_xxsmall__toi52u5d"
                  style="--_4k0ekn3: 1;"
                >
                  <div
                    class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52u3d styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.25rem_xxsmall__toi52u1v styles_justifyContent_normal_xxsmall__toi52u5d"
                    style="--_4k0ekn3: 1;"
                  >
                    <label
                      class="emotion-13 emotion-14 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_default__m4c9owi style_variant_body__m4c9owm style_disabled_false__m4c9ow1b style_undefined_compound_24__m4c9ow20 style_undefined_compound_72__m4c9ow3c"
                      for="«rf»"
                    >
                      Checkbox 2
                    </label>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </fieldset>
    </div>
  </div>
</DocumentFragment>
`;

exports[`selectableCardGroup > renders correctly with error content 1`] = `
<DocumentFragment>
  .emotion-0 {
  border: none;
  padding: 0;
  margin: 0;
}

.emotion-2 {
  position: relative;
  padding: 1rem;
  border-radius: 0.25rem;
  -webkit-transition: border-color 200ms ease,box-shadow 200ms ease;
  transition: border-color 200ms ease,box-shadow 200ms ease;
  cursor: pointer;
  background: #ffffff;
  border: 1px solid #d9dadd;
  color: #3f4250;
}

.emotion-2[data-has-label='false']>:first-child {
  margin-bottom: -0.25rem;
}

.emotion-2[data-has-default-cursor='true'] {
  cursor: default;
}

.emotion-2[data-checked='true'] {
  border: 1px solid #8c40ef;
}

.emotion-2[data-error='true'] {
  border: 1px solid #b3144d;
}

.emotion-2[data-disabled='true'] {
  border: 1px solid #e9eaeb;
  color: #b5b7bd;
  background: #f3f3f4;
  cursor: not-allowed;
}

.emotion-2[data-image="illustration"] {
  padding: 0rem;
}

.emotion-2[data-image="icon"] {
  padding: 0rem;
  padding-right: 1rem;
}

.emotion-2:hover:not([data-error='true']):not([data-disabled='true']),
.emotion-2:active:not([data-error='true']):not([data-disabled='true']) {
  border: 1px solid #8c40ef;
}

.emotion-2:hover:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.emotion-2:active:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'] {
  box-shadow: 0px 4px 16px 4px #f6f3ffcc;
}

.emotion-2[data-has-label='true'] styles__17da2jl1,
.emotion-2[data-has-label='true'] .emotion-6 {
  width: 100%;
}

.emotion-5 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.5rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.emotion-5 .eqr7bqq3 {
  cursor: pointer;
}

.emotion-5[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.emotion-5[aria-disabled='true'] .eqr7bqq3 {
  cursor: not-allowed;
}

.emotion-5[aria-disabled='true'] .emotion-10 {
  fill: #e9eaeb;
}

.emotion-5[aria-disabled='true'] .emotion-10 .emotion-12 {
  stroke: #d9dadd;
  fill: #f3f3f4;
}

.emotion-5[aria-disabled='true'] .emotion-8[aria-invalid="true"]:checked+.emotion-10 {
  fill: #ffd3e3;
}

.emotion-5[aria-disabled='true'] .emotion-8[aria-invalid="true"]:checked+.emotion-10 .emotion-12 {
  stroke: #ffd3e3;
  fill: #ffd3e3;
}

.emotion-5[aria-disabled='true'] .emotion-8[aria-invalid="true"]+.emotion-10 {
  fill: #ffebf2;
}

.emotion-5[aria-disabled='true'] .emotion-8[aria-invalid="true"]+.emotion-10 .emotion-12 {
  stroke: #ffbbd3;
  fill: #ffebf2;
}

.emotion-5[aria-disabled='true'] .emotion-8:checked+.emotion-10 {
  fill: #e5dbfd;
}

.emotion-5[aria-disabled='true'] .emotion-8:checked+.emotion-10 .emotion-12 {
  stroke: #d8c5fc;
  fill: #d8c5fc;
}

.emotion-5[aria-disabled='true'] .emotion-8[aria-checked="mixed"]+.emotion-10 {
  fill: #e5dbfd;
}

.emotion-5[aria-disabled='true'] .emotion-8[aria-checked="mixed"]+.emotion-10 .emotion-12 {
  stroke: #e5dbfd;
  fill: #e5dbfd;
}

.emotion-5 .emotion-8:checked+.emotion-10 path {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transform: translate(2px, 2px);
  -moz-transform: translate(2px, 2px);
  -ms-transform: translate(2px, 2px);
  transform: translate(2px, 2px);
}

.emotion-5 .emotion-8:checked+.emotion-10 .emotion-12 {
  fill: #8c40ef;
  stroke: #8c40ef;
}

.emotion-5 .emotion-8[aria-invalid="true"]:checked+.emotion-10 .emotion-12 {
  fill: #e51963;
  stroke: #e51963;
}

.emotion-5 .emotion-8[aria-checked="mixed"]+.emotion-10 .eqr7bqq5 {
  fill: #ffffff;
}

.emotion-5 .emotion-8[aria-checked="mixed"]+.emotion-10 .emotion-12 {
  fill: #8c40ef;
  stroke: #8c40ef;
}

.emotion-5:hover[aria-disabled='false'] .emotion-8[aria-invalid='false'][aria-checked='false']+.emotion-10 .emotion-12 {
  stroke: #792dd4;
  fill: #e5dbfd;
}

.emotion-5:hover[aria-disabled='false'] .emotion-8[aria-invalid='false'][aria-checked='true']+.emotion-10 .emotion-12 {
  stroke: #792dd4;
  fill: #792dd4;
}

.emotion-5:hover[aria-disabled='false'] .emotion-8[aria-invalid='false'][aria-checked='mixed']+.emotion-10 .emotion-12 {
  stroke: #792dd4;
  fill: #792dd4;
}

.emotion-5:hover[aria-disabled='false'] .emotion-8[aria-invalid='true'][aria-checked='false']+.emotion-10 .emotion-12 {
  stroke: #92103f;
  fill: #ffd3e3;
}

.emotion-5:hover[aria-disabled='false'] .emotion-8[aria-invalid='true'][aria-checked='true']+.emotion-10 .emotion-12 {
  stroke: #d6175c;
  fill: #d6175c;
}

.emotion-5 .emotion-8[aria-invalid="true"]+.emotion-10 {
  fill: #e51963;
}

.emotion-5 .emotion-8[aria-invalid="true"]+.emotion-10 .emotion-12 {
  stroke: #e51963;
  fill: #ffebf2;
}

.emotion-5[data-checked='true'] {
  color: #641cb3;
}

.emotion-5[data-error='true'] {
  color: #b3144d;
}

.emotion-5[aria-disabled='true'] {
  color: #b5b7bd;
}

.emotion-5 input+svg {
  display: none;
}

.emotion-5 label {
  width: 100%;
}

.emotion-5:hover[aria-disabled='false'] .emotion-8[aria-invalid='false'][aria-checked='false']+.emotion-10 .emotion-12 {
  fill: #ffffff;
  stroke: #d9dadd;
}

.emotion-5:hover[aria-disabled='false'] .emotion-8[aria-invalid='false'][aria-checked='true']+.emotion-10 .emotion-12 {
  stroke: #8c40ef;
  fill: #8c40ef;
}

.emotion-5:hover[aria-disabled='false'] .emotion-8[aria-invalid='false'][aria-checked='mixed']+.emotion-10 .emotion-12 {
  stroke: #8c40ef;
  fill: #8c40ef;
}

.emotion-5 .emotion-8:focus+.emotion-10,
.emotion-5 .emotion-8:active+.emotion-10 {
  outline: none;
  background-color: #ffffff;
  fill: #ffffff;
}

.emotion-5 .emotion-8[aria-checked='false'] .emotion-12 {
  fill: #ffffff;
  stroke: #d9dadd;
}

.emotion-7 {
  position: absolute;
  white-space: nowrap;
  height: 1.5rem;
  width: 1.5rem;
  opacity: 0;
  border-width: 0;
}

.emotion-7:not(:disabled) {
  cursor: pointer;
}

.emotion-7:disabled {
  cursor: not-allowed;
}

.emotion-7:not(:disabled):checked+.emotion-10,
.emotion-7:not(:disabled)[aria-checked='mixed']+.emotion-10 {
  fill: #8c40ef;
}

.emotion-7:not(:disabled):checked+.emotion-10 .emotion-12,
.emotion-7:not(:disabled)[aria-checked='mixed']+.emotion-10 .emotion-12 {
  stroke: #8c40ef;
}

.emotion-7:not(:disabled)[aria-invalid='true']+.emotion-10,
.emotion-7:not(:disabled)[aria-invalid='mixed']+.emotion-10 {
  fill: #ffebf2;
}

.emotion-7:not(:disabled)[aria-invalid='true']+.emotion-10 .emotion-12,
.emotion-7:not(:disabled)[aria-invalid='mixed']+.emotion-10 .emotion-12 {
  stroke: #b3144d;
}

.emotion-7:focus+.emotion-10 {
  background-color: #f1eefc;
  fill: #ffebf2;
  outline: 1px solid 0px 0px 0px 3px #8c40ef40;
}

.emotion-7:focus+.emotion-10 .emotion-12 {
  stroke: #792dd4;
  fill: #e5dbfd;
}

.emotion-7[aria-invalid='true']:focus+.emotion-10 {
  background-color: #ffebf2;
  fill: #ffebf2;
  outline: 1px solid 0px 0px 0px 3px #f91b6c40;
}

.emotion-7[aria-invalid='true']:focus+.emotion-10 .emotion-12 {
  stroke: #92103f;
  fill: #ffd3e3;
}

.emotion-9 {
  border-radius: 0.25rem;
  height: 1.5rem;
  width: 1.5rem;
  min-width: 1.5rem;
  min-height: 1.5rem;
}

.emotion-9 path {
  fill: #ffffff;
  -webkit-transform: translate(2px, 2px);
  -moz-transform: translate(2px, 2px);
  -ms-transform: translate(2px, 2px);
  transform: translate(2px, 2px);
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.emotion-11 {
  fill: #ffffff;
  stroke: #d9dadd;
}

.emotion-13 {
  width: 100%;
  cursor: pointer;
}

<div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.5rem_xxsmall__toi52u7 styles_justifyContent_normal_xxsmall__toi52u5d"
    >
      <fieldset
        class="emotion-0 emotion-1"
      >
        <div
          class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.75rem_xxsmall__toi52u27 styles_justifyContent_normal_xxsmall__toi52u5d"
        >
          <legend
            class="styles_default__17td3g92 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_default__m4c9owi style_variant_bodyStrong__m4c9owq style_disabled_false__m4c9ow1b style_undefined_compound_24__m4c9ow20 style_undefined_compound_72__m4c9ow3c"
          >
            Label
          </legend>
          <div
            class="styles__x6hyh50 styles_gap_1rem_xxsmall__x6hyh5d"
            style="--_3mg8xe0: repeat(1, minmax(0, 1fr)); --_3mg8xe1: repeat(1, minmax(0, 1fr)); --_3mg8xe2: repeat(1, minmax(0, 1fr)); --_3mg8xe3: repeat(1, minmax(0, 1fr)); --_3mg8xe4: repeat(1, minmax(0, 1fr)); --_3mg8xe5: repeat(1, minmax(0, 1fr));"
          >
            <div
              class="emotion-2 emotion-3 styles__toi52u0 styles_alignItems_start_xxsmall__toi52u3j styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.25rem_xxsmall__toi52u1v styles_justifyContent_normal_xxsmall__toi52u5d"
              data-checked="true"
              data-disabled="false"
              data-error="true"
              data-has-default-cursor="false"
              data-has-label="true"
              data-image="none"
              data-type="checkbox"
              role="button"
              style="--_4k0ekn3: 1;"
              tabindex="0"
            >
              <div
                aria-disabled="false"
                class="emotion-4 emotion-5 emotion-6"
                data-checked="true"
                data-error="true"
              >
                <input
                  aria-checked="true"
                  aria-describedby="«r18»-hint"
                  aria-invalid="true"
                  checked=""
                  class="emotion-7 emotion-8"
                  id="«r18»"
                  name="checkbox"
                  tabindex="-1"
                  type="checkbox"
                  value="value-1"
                />
                <svg
                  class="emotion-9 emotion-10"
                  fill="none"
                  viewBox="0 0 24 24"
                >
                  <g>
                    <rect
                      class="emotion-11 emotion-12"
                      height="16"
                      rx="0.125rem"
                      stroke-width="2"
                      width="16"
                      x="4"
                      y="4"
                    />
                    <path
                      clip-rule="evenodd"
                      d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
                      fill="white"
                      fill-rule="evenodd"
                      height="9"
                      width="12"
                      x="5"
                      y="4"
                    />
                  </g>
                </svg>
                <div
                  class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.25rem_xxsmall__toi52u1v styles_justifyContent_normal_xxsmall__toi52u5d"
                  style="--_4k0ekn3: 1;"
                >
                  <div
                    class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52u3d styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.25rem_xxsmall__toi52u1v styles_justifyContent_normal_xxsmall__toi52u5d"
                    style="--_4k0ekn3: 1;"
                  >
                    <label
                      class="emotion-13 emotion-14 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_default__m4c9owi style_variant_body__m4c9owm style_disabled_false__m4c9ow1b style_undefined_compound_24__m4c9ow20 style_undefined_compound_72__m4c9ow3c"
                      for="«r18»"
                    >
                      Checkbox 1
                    </label>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="emotion-2 emotion-3 styles__toi52u0 styles_alignItems_start_xxsmall__toi52u3j styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.25rem_xxsmall__toi52u1v styles_justifyContent_normal_xxsmall__toi52u5d"
              data-checked="false"
              data-disabled="false"
              data-error="true"
              data-has-default-cursor="false"
              data-has-label="true"
              data-image="none"
              data-type="checkbox"
              role="button"
              style="--_4k0ekn3: 1;"
              tabindex="0"
            >
              <div
                aria-disabled="false"
                class="emotion-4 emotion-5 emotion-6"
                data-checked="false"
                data-error="true"
              >
                <input
                  aria-checked="false"
                  aria-describedby="«r1c»-hint"
                  aria-invalid="true"
                  class="emotion-7 emotion-8"
                  id="«r1c»"
                  name="checkbox"
                  tabindex="-1"
                  type="checkbox"
                  value="value-2"
                />
                <svg
                  class="emotion-9 emotion-10"
                  fill="none"
                  viewBox="0 0 24 24"
                >
                  <g>
                    <rect
                      class="emotion-11 emotion-12"
                      height="16"
                      rx="0.125rem"
                      stroke-width="2"
                      width="16"
                      x="4"
                      y="4"
                    />
                    <path
                      clip-rule="evenodd"
                      d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
                      fill="white"
                      fill-rule="evenodd"
                      height="9"
                      width="12"
                      x="5"
                      y="4"
                    />
                  </g>
                </svg>
                <div
                  class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.25rem_xxsmall__toi52u1v styles_justifyContent_normal_xxsmall__toi52u5d"
                  style="--_4k0ekn3: 1;"
                >
                  <div
                    class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52u3d styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.25rem_xxsmall__toi52u1v styles_justifyContent_normal_xxsmall__toi52u5d"
                    style="--_4k0ekn3: 1;"
                  >
                    <label
                      class="emotion-13 emotion-14 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_default__m4c9owi style_variant_body__m4c9owm style_disabled_false__m4c9ow1b style_undefined_compound_24__m4c9ow20 style_undefined_compound_72__m4c9ow3c"
                      for="«r1c»"
                    >
                      Checkbox 2
                    </label>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </fieldset>
      <span
        class="style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_danger__m4c9owd style_prominence_default__m4c9owi style_variant_caption__m4c9ows style_disabled_false__m4c9ow1b style_undefined_compound_8__m4c9ow1k style_undefined_compound_72__m4c9ow3c"
      >
        Error content
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`selectableCardGroup > renders correctly with helper content 1`] = `
<DocumentFragment>
  .emotion-0 {
  border: none;
  padding: 0;
  margin: 0;
}

.emotion-2 {
  position: relative;
  padding: 1rem;
  border-radius: 0.25rem;
  -webkit-transition: border-color 200ms ease,box-shadow 200ms ease;
  transition: border-color 200ms ease,box-shadow 200ms ease;
  cursor: pointer;
  background: #ffffff;
  border: 1px solid #d9dadd;
  color: #3f4250;
}

.emotion-2[data-has-label='false']>:first-child {
  margin-bottom: -0.25rem;
}

.emotion-2[data-has-default-cursor='true'] {
  cursor: default;
}

.emotion-2[data-checked='true'] {
  border: 1px solid #8c40ef;
}

.emotion-2[data-error='true'] {
  border: 1px solid #b3144d;
}

.emotion-2[data-disabled='true'] {
  border: 1px solid #e9eaeb;
  color: #b5b7bd;
  background: #f3f3f4;
  cursor: not-allowed;
}

.emotion-2[data-image="illustration"] {
  padding: 0rem;
}

.emotion-2[data-image="icon"] {
  padding: 0rem;
  padding-right: 1rem;
}

.emotion-2:hover:not([data-error='true']):not([data-disabled='true']),
.emotion-2:active:not([data-error='true']):not([data-disabled='true']) {
  border: 1px solid #8c40ef;
}

.emotion-2:hover:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.emotion-2:active:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'] {
  box-shadow: 0px 4px 16px 4px #f6f3ffcc;
}

.emotion-2[data-has-label='true'] styles__17da2jl1,
.emotion-2[data-has-label='true'] .emotion-6 {
  width: 100%;
}

.emotion-5 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.5rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.emotion-5 .eqr7bqq3 {
  cursor: pointer;
}

.emotion-5[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.emotion-5[aria-disabled='true'] .eqr7bqq3 {
  cursor: not-allowed;
}

.emotion-5[aria-disabled='true'] .emotion-10 {
  fill: #e9eaeb;
}

.emotion-5[aria-disabled='true'] .emotion-10 .emotion-12 {
  stroke: #d9dadd;
  fill: #f3f3f4;
}

.emotion-5[aria-disabled='true'] .emotion-8[aria-invalid="true"]:checked+.emotion-10 {
  fill: #ffd3e3;
}

.emotion-5[aria-disabled='true'] .emotion-8[aria-invalid="true"]:checked+.emotion-10 .emotion-12 {
  stroke: #ffd3e3;
  fill: #ffd3e3;
}

.emotion-5[aria-disabled='true'] .emotion-8[aria-invalid="true"]+.emotion-10 {
  fill: #ffebf2;
}

.emotion-5[aria-disabled='true'] .emotion-8[aria-invalid="true"]+.emotion-10 .emotion-12 {
  stroke: #ffbbd3;
  fill: #ffebf2;
}

.emotion-5[aria-disabled='true'] .emotion-8:checked+.emotion-10 {
  fill: #e5dbfd;
}

.emotion-5[aria-disabled='true'] .emotion-8:checked+.emotion-10 .emotion-12 {
  stroke: #d8c5fc;
  fill: #d8c5fc;
}

.emotion-5[aria-disabled='true'] .emotion-8[aria-checked="mixed"]+.emotion-10 {
  fill: #e5dbfd;
}

.emotion-5[aria-disabled='true'] .emotion-8[aria-checked="mixed"]+.emotion-10 .emotion-12 {
  stroke: #e5dbfd;
  fill: #e5dbfd;
}

.emotion-5 .emotion-8:checked+.emotion-10 path {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transform: translate(2px, 2px);
  -moz-transform: translate(2px, 2px);
  -ms-transform: translate(2px, 2px);
  transform: translate(2px, 2px);
}

.emotion-5 .emotion-8:checked+.emotion-10 .emotion-12 {
  fill: #8c40ef;
  stroke: #8c40ef;
}

.emotion-5 .emotion-8[aria-invalid="true"]:checked+.emotion-10 .emotion-12 {
  fill: #e51963;
  stroke: #e51963;
}

.emotion-5 .emotion-8[aria-checked="mixed"]+.emotion-10 .eqr7bqq5 {
  fill: #ffffff;
}

.emotion-5 .emotion-8[aria-checked="mixed"]+.emotion-10 .emotion-12 {
  fill: #8c40ef;
  stroke: #8c40ef;
}

.emotion-5:hover[aria-disabled='false'] .emotion-8[aria-invalid='false'][aria-checked='false']+.emotion-10 .emotion-12 {
  stroke: #792dd4;
  fill: #e5dbfd;
}

.emotion-5:hover[aria-disabled='false'] .emotion-8[aria-invalid='false'][aria-checked='true']+.emotion-10 .emotion-12 {
  stroke: #792dd4;
  fill: #792dd4;
}

.emotion-5:hover[aria-disabled='false'] .emotion-8[aria-invalid='false'][aria-checked='mixed']+.emotion-10 .emotion-12 {
  stroke: #792dd4;
  fill: #792dd4;
}

.emotion-5:hover[aria-disabled='false'] .emotion-8[aria-invalid='true'][aria-checked='false']+.emotion-10 .emotion-12 {
  stroke: #92103f;
  fill: #ffd3e3;
}

.emotion-5:hover[aria-disabled='false'] .emotion-8[aria-invalid='true'][aria-checked='true']+.emotion-10 .emotion-12 {
  stroke: #d6175c;
  fill: #d6175c;
}

.emotion-5 .emotion-8[aria-invalid="true"]+.emotion-10 {
  fill: #e51963;
}

.emotion-5 .emotion-8[aria-invalid="true"]+.emotion-10 .emotion-12 {
  stroke: #e51963;
  fill: #ffebf2;
}

.emotion-5[data-checked='true'] {
  color: #641cb3;
}

.emotion-5[data-error='true'] {
  color: #b3144d;
}

.emotion-5[aria-disabled='true'] {
  color: #b5b7bd;
}

.emotion-5 input+svg {
  display: none;
}

.emotion-5 label {
  width: 100%;
}

.emotion-5:hover[aria-disabled='false'] .emotion-8[aria-invalid='false'][aria-checked='false']+.emotion-10 .emotion-12 {
  fill: #ffffff;
  stroke: #d9dadd;
}

.emotion-5:hover[aria-disabled='false'] .emotion-8[aria-invalid='false'][aria-checked='true']+.emotion-10 .emotion-12 {
  stroke: #8c40ef;
  fill: #8c40ef;
}

.emotion-5:hover[aria-disabled='false'] .emotion-8[aria-invalid='false'][aria-checked='mixed']+.emotion-10 .emotion-12 {
  stroke: #8c40ef;
  fill: #8c40ef;
}

.emotion-5 .emotion-8:focus+.emotion-10,
.emotion-5 .emotion-8:active+.emotion-10 {
  outline: none;
  background-color: #ffffff;
  fill: #ffffff;
}

.emotion-5 .emotion-8[aria-checked='false'] .emotion-12 {
  fill: #ffffff;
  stroke: #d9dadd;
}

.emotion-7 {
  position: absolute;
  white-space: nowrap;
  height: 1.5rem;
  width: 1.5rem;
  opacity: 0;
  border-width: 0;
}

.emotion-7:not(:disabled) {
  cursor: pointer;
}

.emotion-7:disabled {
  cursor: not-allowed;
}

.emotion-7:not(:disabled):checked+.emotion-10,
.emotion-7:not(:disabled)[aria-checked='mixed']+.emotion-10 {
  fill: #8c40ef;
}

.emotion-7:not(:disabled):checked+.emotion-10 .emotion-12,
.emotion-7:not(:disabled)[aria-checked='mixed']+.emotion-10 .emotion-12 {
  stroke: #8c40ef;
}

.emotion-7:not(:disabled)[aria-invalid='true']+.emotion-10,
.emotion-7:not(:disabled)[aria-invalid='mixed']+.emotion-10 {
  fill: #ffebf2;
}

.emotion-7:not(:disabled)[aria-invalid='true']+.emotion-10 .emotion-12,
.emotion-7:not(:disabled)[aria-invalid='mixed']+.emotion-10 .emotion-12 {
  stroke: #b3144d;
}

.emotion-7:focus+.emotion-10 {
  background-color: #f1eefc;
  fill: #ffebf2;
  outline: 1px solid 0px 0px 0px 3px #8c40ef40;
}

.emotion-7:focus+.emotion-10 .emotion-12 {
  stroke: #792dd4;
  fill: #e5dbfd;
}

.emotion-7[aria-invalid='true']:focus+.emotion-10 {
  background-color: #ffebf2;
  fill: #ffebf2;
  outline: 1px solid 0px 0px 0px 3px #f91b6c40;
}

.emotion-7[aria-invalid='true']:focus+.emotion-10 .emotion-12 {
  stroke: #92103f;
  fill: #ffd3e3;
}

.emotion-9 {
  border-radius: 0.25rem;
  height: 1.5rem;
  width: 1.5rem;
  min-width: 1.5rem;
  min-height: 1.5rem;
}

.emotion-9 path {
  fill: #ffffff;
  -webkit-transform: translate(2px, 2px);
  -moz-transform: translate(2px, 2px);
  -ms-transform: translate(2px, 2px);
  transform: translate(2px, 2px);
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.emotion-11 {
  fill: #ffffff;
  stroke: #d9dadd;
}

.emotion-13 {
  width: 100%;
  cursor: pointer;
}

<div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.5rem_xxsmall__toi52u7 styles_justifyContent_normal_xxsmall__toi52u5d"
    >
      <fieldset
        class="emotion-0 emotion-1"
      >
        <div
          class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.75rem_xxsmall__toi52u27 styles_justifyContent_normal_xxsmall__toi52u5d"
        >
          <legend
            class="styles_default__17td3g92 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_default__m4c9owi style_variant_bodyStrong__m4c9owq style_disabled_false__m4c9ow1b style_undefined_compound_24__m4c9ow20 style_undefined_compound_72__m4c9ow3c"
          >
            Label
          </legend>
          <div
            class="styles__x6hyh50 styles_gap_1rem_xxsmall__x6hyh5d"
            style="--_3mg8xe0: repeat(1, minmax(0, 1fr)); --_3mg8xe1: repeat(1, minmax(0, 1fr)); --_3mg8xe2: repeat(1, minmax(0, 1fr)); --_3mg8xe3: repeat(1, minmax(0, 1fr)); --_3mg8xe4: repeat(1, minmax(0, 1fr)); --_3mg8xe5: repeat(1, minmax(0, 1fr));"
          >
            <div
              class="emotion-2 emotion-3 styles__toi52u0 styles_alignItems_start_xxsmall__toi52u3j styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.25rem_xxsmall__toi52u1v styles_justifyContent_normal_xxsmall__toi52u5d"
              data-checked="true"
              data-disabled="false"
              data-error="false"
              data-has-default-cursor="false"
              data-has-label="true"
              data-image="none"
              data-type="checkbox"
              role="button"
              style="--_4k0ekn3: 1;"
              tabindex="0"
            >
              <div
                aria-disabled="false"
                class="emotion-4 emotion-5 emotion-6"
                data-checked="true"
                data-error="false"
              >
                <input
                  aria-checked="true"
                  aria-invalid="false"
                  checked=""
                  class="emotion-7 emotion-8"
                  id="«rk»"
                  name="checkbox"
                  tabindex="-1"
                  type="checkbox"
                  value="value-1"
                />
                <svg
                  class="emotion-9 emotion-10"
                  fill="none"
                  viewBox="0 0 24 24"
                >
                  <g>
                    <rect
                      class="emotion-11 emotion-12"
                      height="16"
                      rx="0.125rem"
                      stroke-width="2"
                      width="16"
                      x="4"
                      y="4"
                    />
                    <path
                      clip-rule="evenodd"
                      d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
                      fill="white"
                      fill-rule="evenodd"
                      height="9"
                      width="12"
                      x="5"
                      y="4"
                    />
                  </g>
                </svg>
                <div
                  class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.25rem_xxsmall__toi52u1v styles_justifyContent_normal_xxsmall__toi52u5d"
                  style="--_4k0ekn3: 1;"
                >
                  <div
                    class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52u3d styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.25rem_xxsmall__toi52u1v styles_justifyContent_normal_xxsmall__toi52u5d"
                    style="--_4k0ekn3: 1;"
                  >
                    <label
                      class="emotion-13 emotion-14 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_default__m4c9owi style_variant_body__m4c9owm style_disabled_false__m4c9ow1b style_undefined_compound_24__m4c9ow20 style_undefined_compound_72__m4c9ow3c"
                      for="«rk»"
                    >
                      Checkbox 1
                    </label>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="emotion-2 emotion-3 styles__toi52u0 styles_alignItems_start_xxsmall__toi52u3j styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.25rem_xxsmall__toi52u1v styles_justifyContent_normal_xxsmall__toi52u5d"
              data-checked="false"
              data-disabled="false"
              data-error="false"
              data-has-default-cursor="false"
              data-has-label="true"
              data-image="none"
              data-type="checkbox"
              role="button"
              style="--_4k0ekn3: 1;"
              tabindex="0"
            >
              <div
                aria-disabled="false"
                class="emotion-4 emotion-5 emotion-6"
                data-checked="false"
                data-error="false"
              >
                <input
                  aria-checked="false"
                  aria-invalid="false"
                  class="emotion-7 emotion-8"
                  id="«ro»"
                  name="checkbox"
                  tabindex="-1"
                  type="checkbox"
                  value="value-2"
                />
                <svg
                  class="emotion-9 emotion-10"
                  fill="none"
                  viewBox="0 0 24 24"
                >
                  <g>
                    <rect
                      class="emotion-11 emotion-12"
                      height="16"
                      rx="0.125rem"
                      stroke-width="2"
                      width="16"
                      x="4"
                      y="4"
                    />
                    <path
                      clip-rule="evenodd"
                      d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
                      fill="white"
                      fill-rule="evenodd"
                      height="9"
                      width="12"
                      x="5"
                      y="4"
                    />
                  </g>
                </svg>
                <div
                  class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.25rem_xxsmall__toi52u1v styles_justifyContent_normal_xxsmall__toi52u5d"
                  style="--_4k0ekn3: 1;"
                >
                  <div
                    class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52u3d styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.25rem_xxsmall__toi52u1v styles_justifyContent_normal_xxsmall__toi52u5d"
                    style="--_4k0ekn3: 1;"
                  >
                    <label
                      class="emotion-13 emotion-14 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_default__m4c9owi style_variant_body__m4c9owm style_disabled_false__m4c9ow1b style_undefined_compound_24__m4c9ow20 style_undefined_compound_72__m4c9ow3c"
                      for="«ro»"
                    >
                      Checkbox 2
                    </label>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </fieldset>
      <span
        class="style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_weak__m4c9owl style_variant_caption__m4c9ows style_disabled_false__m4c9ow1b style_undefined_compound_27__m4c9ow23 style_undefined_compound_75__m4c9ow3f"
      >
        Helper content
      </span>
    </div>
  </div>
</DocumentFragment>
`;
